# transcription-service-backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  config.yaml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  logging.yaml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  health.py  jobs.py  metrics.py  users.py
app/api/v1/schemas/: __init__.py  common.py  jobs.py  users.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/domain/: __init__.py
app/domain/shared/: __init__.py  enums.py  exceptions.py  value_objects.py
app/domain/transcription/: __init__.py  models.py  services.py
app/infrastructure/: __init__.py
app/infrastructure/database/: __init__.py  base.py  connection.py  models.py
app/infrastructure/database/repositories/: __init__.py  base.py  jobs.py  users.py
app/infrastructure/storage/: __init__.py  audio_storage.py  base.py  file_storage.py
app/infrastructure/workers/: __init__.py  celery_app.py  tasks.py  worker_config.py
app/utils/: __init__.py  time_utils.py
deployment/kubernetes/: app.yaml  configmap.yaml  ingress.yaml  namespace.yaml  persistent-volumes.yaml  postgres.yaml  redis.yaml  secrets.yaml
deployment/scripts/: deploy.sh
docs/: DevOps_Guide.md  Testing_Guide.md
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/rules/: transcription_service.yml
requirements/: ai.txt  base.txt  development.txt  evaluation.txt  production.txt  testing.txt
src/: audio_processing.py  constants.py  database.py  hallucination_detection.py  logging_config.py  main.py  models.py  schemas.py  tasks.py  utils.py
tests/: __init__.py  conftest.py
tests/e2e/: test_full_transcription_flow.py
tests/integration/: test_api_endpoints.py  test_transcription_workflow.py
tests/unit/domain/: __init__.py  test_transcription_models.py  test_value_objects.py
tests/unit/infrastructure/: test_redis_client.py
tests/unit/services/: test_transcription_service.py
